feat: Add competitor tracking types and OpenAI dependency
- Extended Restaurant model with competitor tracking fields
- Added CompetitorAlert interface for anomaly detection
- Added openai package for GPT-4o-mini integration

--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/pg": "^8.10.9",
+    "lighthouse": "^13.0.3",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
